# Device-Toolkit

./: .gitignore  Pipfile  README.md  driver.py  pyproject.toml
cpp_src/: os_finder.cpp  system_info.h  system_info_mac.cpp
scripts/: build.sh  clean.sh  full-build.sh
src/: __init__.py  cpp_bindings.cpp  cpp_bindings.pyx
src/core/: static_info.py
tests/: test_cpp_integration.py  test_os_finder.py  test_python.py
